test/expected/explain_xxi-c17.out
explain constexpr int x
        ^
9: error: "constexpr": unsupported keyword until C23
